# MoCap-Studio

./: CLAUDE.md  CMakeLists.txt  LICENSE  README.md  config.yaml
cmake/: FindONNXRuntime.cmake
docs/: MoCapStudio_Spec.md
docs/plans/: 2026-03-03-full-implementation-design.md
resources/shaders/: basic.frag  basic.vert
resources/skeletons/: body_25.json
src/: CMakeLists.txt  main.cpp
src/capture/: blackmagic_camera_source.cpp  blackmagic_camera_source.h  frame_broker.cpp  frame_broker.h  icamera_source.h  ip_camera_source.cpp  ip_camera_source.h  usb_camera_source.cpp  usb_camera_source.h  video_file_camera_source.cpp  video_file_camera_source.h
src/core/: camera_intrinsics.cpp  camera_intrinsics.h  config.cpp  config.h  intrinsics_calibrator.cpp  intrinsics_calibrator.h  skeleton_definition.cpp  skeleton_definition.h  types.h
src/gui/: calibration_wizard.cpp  calibration_wizard.h  camera_edit_dialog.cpp  camera_edit_dialog.h  camera_feed_widget.cpp  camera_feed_widget.h  camera_management_dialog.cpp  camera_management_dialog.h  export_dialog.cpp  export_dialog.h  inspector_panel.cpp  inspector_panel.h  main_window.cpp  main_window.h  mocap_canvas.cpp  mocap_canvas.h  session_dialog.cpp  session_dialog.h  settings_dialog.cpp  settings_dialog.h  timeline_widget.cpp  timeline_widget.h
src/pose/: ipose_estimator.h  onnx_pose_estimator.cpp  onnx_pose_estimator.h  person_tracker.cpp  person_tracker.h
src/skeleton/: skeleton_solver.cpp  skeleton_solver.h
src/storage/: binary_io.cpp  binary_io.h  session_manager.cpp  session_manager.h
src/storage/exporters/: bvh_exporter.cpp  bvh_exporter.h  c3d_exporter.cpp  c3d_exporter.h  csv_exporter.cpp  csv_exporter.h  fbx_exporter.cpp  fbx_exporter.h  json_exporter.cpp  json_exporter.h  usd_exporter.cpp  usd_exporter.h
src/triangulation/: temporal_filter.cpp  temporal_filter.h  triangulator.cpp  triangulator.h
tests/: CMakeLists.txt  test_binary_io.cpp  test_bvh_exporter.cpp  test_config.cpp  test_csv_json_exporter.cpp  test_intrinsics_calibrator.cpp  test_person_tracker.cpp  test_skeleton_definition.cpp  test_skeleton_solver.cpp  test_temporal_filter.cpp  test_triangulation.cpp  test_types.cpp
